# pamsched

./: README.md  pyproject.toml  schema.json
docs/: api.rst  conf.py  index.rst
pamsched/: __init__.py  cli.py  models.py  parser.py
